--- a/mission1/demo/pom.xml
+++ b/mission1/demo/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>chanbrightt</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>i want no dev</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -30,8 +30,8 @@
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
-           				<groupId>org.springframework.boot</groupId>
-           				<artifactId>spring-boot-starter-web</artifactId>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
